# avatar_generator

./: CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
avatar_generator/: __init__.py  generator.py  hash.py
avatar_generator/builders/: __init__.py  _abstract.py  _pixel.py  utils.py
avatar_generator/builders/mixins/: __init__.py  background.py  opacity.py
